Navbar improvements and alignment fixes

--- a/ui/src/components/ApprovedSightingsList/ApprovedSightingsList.scss
+++ b/ui/src/components/ApprovedSightingsList/ApprovedSightingsList.scss
@@ -178,7 +178,7 @@ th {
     }
 
     .approved-sightings-table {
-        width: 90vw;
+        width: 80vw;
     }
 
     .hide-on-mobile {
