--- a/ui/src/pages/Page/Page.scss
+++ b/ui/src/pages/Page/Page.scss
@@ -70,6 +70,10 @@ label {
   input {
     height: 32px;
   }
+
+  .page {
+    padding: 10px;
+  }
 }
 
   
