--- a/ui/src/pages/UserProfile/UserProfilePage.scss
+++ b/ui/src/pages/UserProfile/UserProfilePage.scss
@@ -3,11 +3,10 @@
 }
 
 .page {
-    padding: 40px;
     border-radius: 20px;
 }
 
 
 .my-sightings-h1{
-    margin-left: 44%;
+    text-align: center;
 }
